--- a/pages/table/table.wxml
+++ b/pages/table/table.wxml
@@ -30,9 +30,9 @@
       <view class='content'>
         <view class="weui-tab">
           <view class="weui-navbar">
-              <block wx:for="{{tabs}}" wx:key="*this">
+              <block wx:for="{{tabs}}" wx:key="*this" wx:for-item="tab">
                   <view id="{{index}}" class="weui-navbar__item {{activeIndex == index ? 'weui-bar__item_on' : ''}}" bindtap="tabClick">
-                      <view class="weui-navbar__title">{{item}}</view>
+                      <view class="weui-navbar__title">{{tab}}</view>
                   </view>
               </block>
           </view>
@@ -42,9 +42,9 @@
                   <view class="weui-flex__item border"><view class="placeholder">分数</view></view>
                   <view class="weui-flex__item"><view class="placeholder">排名</view></view>
                 </view>
-                <view class="weui-flex underline">
-                  <view class="weui-flex__item"><view class="placeholder">556</view></view>
-                  <view class="weui-flex__item"><view class="placeholder">123456</view></view>
+                <view class="weui-flex underline" wx:for="{{grade}}" wx:key="">
+                  <view class="weui-flex__item"><view class="placeholder">{{item.SCORE}}</view></view>
+                  <view class="weui-flex__item"><view class="placeholder">{{item.TOTALCOUNT}}</view></view>
                 </view>
               </view>
               <view class="weui-tab__content" hidden="{{activeIndex != 1}}">
@@ -61,4 +61,8 @@
         </view>
       </view>
     </view>
+</view>
+<view class="weui-loadmore" hidden='{{!isLoadingMore}}'>
+    <view class="weui-loading"></view>
+    <view class="weui-loadmore__tips">正在加载</view>
 </view>
