--- a/pages/table/table.wxss
+++ b/pages/table/table.wxss
@@ -11,16 +11,42 @@
   width:40%;
   height:50rpx;
   background-color:#94f5fe;
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .top-right{
   width:40%;
   height:50rpx;
+  
   background-color:#a7dec0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.region{
+  height:50rpx;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .year{
   font-size:28rpx;
-  text-align: center;
+  width:100%;
+  height:50rpx;
+}
+.date{
+  padding:0 30rpx 0 80rpx;
+  height:50rpx;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.down{
+  width:25rpx;
+  height:25rpx;
 }
 .content{
   margin-top:50rpx;
