--- a/pages/chatroom/chatroom.wxml
+++ b/pages/chatroom/chatroom.wxml
@@ -38,11 +38,12 @@
     <view class="room_bar">
         <form bindreset="cleanInput">
             <view class="f-row">
-                <input class="f news" type="text" value="{{ inputMessage }}"  placeholder="输入新消息" placeholder-style="color:#CFCFCF;padding-left:5px;" bindinput="bindMessage"/>
-                <view class="open_emoji" bindtap="openEmoji">
+            <view class="open_emoji" bindtap="openEmoji">
                   <image src="/images/Emoji.png"/>
                 </view>
-                <button class="send_btn" bindtap="sendMessage" formType="reset">发送</button>
+                <textarea type="text" value="{{ inputMessage }}" bindinput="bindMessage" fixed='true' auto-height='true' class='news'></textarea>
+                <button class="weui-btn mini-btn" bindtap="sendMessage" formType="reset">发送</button>
+                <!-- <button class="send_btn" >发送</button> -->
             </view>
         </form>
         
