--- a/pages/video/video.wxml
+++ b/pages/video/video.wxml
@@ -2,7 +2,34 @@
 <view class="section tc">
   <!-- <video id="myVideo"  class="video" src="http://wxsnsdy.tc.qq.com/105/20210/snsdyvideodownload?filekey=30280201010421301f0201690402534804102ca905ce620b1241b726bc41dcff44e00204012882540400&bizid=1023&hy=SH&fileparam=302c020101042530230204136ffd93020457e3c4ff02024ef202031e8d7f02030f42400204045a320a0201000400" controls show-fullscreen-btn show-center-play-btn></video>
   <video id="myVideo"  class="video" src="http://wxsnsdy.tc.qq.com/105/20210/snsdyvideodownload?filekey=30280201010421301f0201690402534804102ca905ce620b1241b726bc41dcff44e00204012882540400&bizid=1023&hy=SH&fileparam=302c020101042530230204136ffd93020457e3c4ff02024ef202031e8d7f02030f42400204045a320a0201000400" controls show-fullscreen-btn show-center-play-btn></video> -->
-  <view class='image'>
-    <image src="/images/"></image>
+  <view class='section'>
+    <view class='section-item'>
+      <image class='images' src="/images/0001.jpg" ></image>
+      <text>自主招生讲堂系列</text>
+      <view class='time'>
+        <view class='date'>
+          <image src="/images/time.png" style="width:34rpx;height:34rpx"></image>
+          <text class='text'>2018-01-31</text>
+        </view>
+        <view class='count'>
+          <image src="/images/browse.png" style="width:34rpx;height:34rpx"></image>
+          <text class='text'>32222次</text>
+        </view>
+      </view>
+    </view>
+  </view>
+  <view class='section-item'>
+      <image class='images' src="/images/0001.jpg" ></image>
+      <text>自主招生讲堂系列</text>
+      <view class='time'>
+        <view class='date'>
+          <image src="/images/time.png" style="width:34rpx;height:34rpx"></image>
+          <text class='text'>2018-01-31</text>
+        </view>
+        <view class='count'>
+          <image src="/images/browse.png" style="width:34rpx;height:34rpx"></image>
+          <text class='text'>32222次</text>
+        </view>
+      </view>
   </view>
 </view>
