--- a/pages/video/video.wxss
+++ b/pages/video/video.wxss
@@ -7,7 +7,33 @@
   justify-content: space-between;
   align-items: center;
 }
-.video{
-  width:45%;
-  height:324rpx;
+.section-item{
+  width:100%;
+}
+.images{
+  width:100%;
+  height:300rpx;
+}
+.time{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.count{
+  width:50%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.date{
+  width:50%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.text{
+  font-size:24rpx;
 }
