修改买卡功能

--- a/pages/person/goods/goods.wxml
+++ b/pages/person/goods/goods.wxml
@@ -1,6 +1,6 @@
 <!--pages/person/goods/goods.wxml-->
 <view class='page'>
-  <view class='content' bindtap="pay"> 
+  <view class='content'> 
     <image src="/images/tb12.png" ></image>
     <text >金币</text>
     <text>剩余金币：{{BALANCE}}</text> 
