--- a/pages/analog/result/result.wxml
+++ b/pages/analog/result/result.wxml
@@ -3,7 +3,7 @@
   <view class='page_bd'>
     <block wx:for="{{results}}" wx:for-item="school" wx:key="*this">
       <view class="weui-cells weui-cells_after-title" bindtap='toDetails' id='{{index}}' data-id="{{school[0].SCHOOL_ID}}">
-        <view bindtap="show" class="weui-cell weui-cell_access" hover-class="weui-cell_active" >
+        <view class="weui-cell weui-cell_access" hover-class="weui-cell_active" >
             <view class="weui-cell__bd">{{school[0].NAME}}</view>
             <view class="weui-cell__ft weui-cell__ft_in-access"></view>
         </view>
