--- a/pages/video/video.wxss
+++ b/pages/video/video.wxss
@@ -1,18 +1,18 @@
 /* pages/video/video.wxss */
 .section{
   width:96%;
-  margin:5rpx 15rpx;
+  margin:5rpx 2% 5rpx 2%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
 }
 .section-item{
-  width:100%;
+  width:49%;
 }
 .images{
   width:100%;
-  height:300rpx;
+  height:200rpx;
 }
 .time{
   display: flex;
