--- a/pages/news/news.wxml
+++ b/pages/news/news.wxml
@@ -1,12 +1,12 @@
 <!--pages/news/news.wxml-->
-<view  style="padding:15rpx 0;">
+<!-- <view>
   <block wx:for="{{news}}" wx:key="" id="{{index}}" >
-  <view style='display:flex;flex-direction:row;margin-top:40rpx;' bindtap='news' data-id="{{item.NEWS_ID}}">
+  <view class='content' bindtap='news' data-id="{{item.NEWS_ID}}">
     <view class='news'>
       <image src='{{item.IMGURL}}' style='width:100%;height:100%;'></image>
     </view>
-    <view class='headlines' >
-      <view style='height:40px;overflow: hidden;white-space: nowrap;text-overflow: ellipsis;'>{{item.TITLE}}</view>
+    <view class='headlines'>
+      <view class="content-top">{{item.TITLE}}</view>
       <view class="flex-x" style='margin-top:0;'>
         <view class='flex-x' style='margin-right: 20rpx;'>
           <image class='icon' src='../../images/time.png'></image>
@@ -21,4 +21,24 @@
   </view>
   </block>
 </view>
-   
+    -->
+<block wx:for="{{news}}" wx:key="" id="{{index}}" >
+<view class='content'>
+  <view class='content-left'>
+    <image src="{{item.IMGURL}}"></image>
+  </view>
+  <view class='content-right'>
+    <view class='item-title'>{{item.TITLE}}</view>
+    <view class='item-time'>
+      <view class='time-img'>
+        <image src='/images/time.png' style="width:30rpx;height:30rpx"></image>
+        <text style='margin-left:10rpx;'>{{item.MODIFYTIME}}</text>
+      </view>
+      <view class='time-count'>
+        <image src='/images/browse.png' style="width:30rpx;height:30rpx"></image>
+        <text style='margin-left:10rpx;'>{{item.VIEWCOUNT}}</text>
+      </view>
+    </view>
+  </view>
+</view>
+</block>
