--- a/pages/person/person.wxml
+++ b/pages/person/person.wxml
@@ -50,7 +50,7 @@
                   </view>
                   <view class="weui-cell__ft weui-cell__ft_in-access"></view>
               </navigator>
-              <view class="weui-cell weui-cell_access" hover-class="weui-cell_active" bindtap="power">
+              <view class="weui-cell weui-cell_access" hover-class="weui-cell_active" bindtap="power" wx:if="{{vip == 0}}">
                   <view class="weui-cell__hd"><image src="/images/tb05.png" style="width: 20px;height: 20px;margin-right: 5px" /></view>
                   <view class="weui-cell__bd weui-cell_primary">
                       <view>升级成会员</view>
