--- a/pages/news/news.wxml
+++ b/pages/news/news.wxml
@@ -1,27 +1,4 @@
-<!--pages/news/news.wxml-->
-<!-- <view>
-  <block wx:for="{{news}}" wx:key="" id="{{index}}" >
-  <view class='content' bindtap='news' data-id="{{item.NEWS_ID}}">
-    <view class='news'>
-      <image src='{{item.IMGURL}}' style='width:100%;height:100%;'></image>
-    </view>
-    <view class='headlines'>
-      <view class="content-top">{{item.TITLE}}</view>
-      <view class="flex-x" style='margin-top:0;'>
-        <view class='flex-x' style='margin-right: 20rpx;'>
-          <image class='icon' src='../../images/time.png'></image>
-          <span class='time-t'>{{item.MODIFYTIME}}</span>
-        </view>
-        <view class='flex-x'>
-          <image class='icon' src='../../images/browse.png'></image>
-          <span class='time-t'>{{item.VIEWCOUNT}}</span>
-        </view>
-      </view>
-    </view>
-  </view>
-  </block>
-</view>
-    -->
+
 <block wx:for="{{news}}" wx:key="" id="{{index}}" >
 <view class='content'>
   <view class='content-left'>
@@ -42,3 +19,4 @@
   </view>
 </view>
 </block>
+<view class='white'></view>
