--- a/pages/news/news.wxss
+++ b/pages/news/news.wxss
@@ -6,7 +6,8 @@
   display: flex;
   flex-direction: row;
   justify-content:flex-start;
-  align-items:
+  align-items:center;
+}
 .content-left{
   width:30%;
   height:150rpx; 
