--- a/pages/intelligence/result/content/content.wxml
+++ b/pages/intelligence/result/content/content.wxml
@@ -63,8 +63,8 @@
           </view>
           <view class="weui-flex">
             <view class="weui-flex__item"><view class="placeholder">年份</view></view>
-            <view class="weui-flex__item"><view class="placeholder">最高分</view></view>
-            <view class="weui-flex__item"><view class="placeholder">最低分</view></view>
+            <view class="weui-flex__item"><view class="placeholder">分数区间</view></view>
+            <view class="weui-flex__item"><view class="placeholder">排名</view></view>
             <view class="weui-flex__item"><view class="placeholder">录取数</view></view>
         </view>
         </view>
@@ -76,8 +76,8 @@
         <view class="page__bd page__bd_spacing" wx:for="{{item.scores}}" wx:for-item="score" wx:key="">
           <view class="weui-flex">
             <view class="weui-flex__item year"><view class="placeholder" >{{score.YEAR_VALUE}}</view></view>
-            <view class="weui-flex__item year"><view class="placeholder" >{{score.MAXSCORE}}</view></view>
-            <view class="weui-flex__item year"><view class="placeholder" >{{score.MINSCORE}}</view></view>
+            <view class="weui-flex__item year"><view class="placeholder" >{{score.MAXSCORE}}~{{score.MINSCORE}}</view></view>
+            <view class="weui-flex__item year"><view class="placeholder" ></view></view>
             <view class="weui-flex__item year"><view class="placeholder">{{score.MSORT}}</view></view>     
         </view>  
         </view>
