--- a/pages/analog/result/content/content.wxss
+++ b/pages/analog/result/content/content.wxss
@@ -61,13 +61,25 @@
   padding-left:8%;
   width:100%;
 }
-.weui-flex__item{
+.weui-flex__item1{
+  width:25%;
+  padding:10rpx 0;
+}
+.weui-flex__item2{
+  width:15%;
+  padding:10rpx 0;
+}
+.weui-flex__items{
+  width:45%;
   padding:10rpx 0;
 }
 .placeholder{
   text-align: center;
 }
 .page__bd_spacing{
+  padding-top:20rpx;
+  padding-left:10rpx;
+  padding-right:10rpx;
   background-color: white;
 }
 .whole{
@@ -76,7 +88,7 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;  
-   border-bottom:1rpx solid #EEEEEE;
+  border-bottom:1rpx solid #EEEEEE;
 }
 .left{
   display:flex;
@@ -93,12 +105,12 @@
   padding:0rpx 0rpx 0rpx 30rpx;
 }
 .center{
-  width:60%;
+  width:65%;
   border-right:1rpx solid #EEEEEE; 
   border-left:1rpx solid #EEEEEE;
 }
 .right{
-  width:15%;
+  width:10%;
   
 }
 .right text{
