--- a/pages/person/basics/basics.wxml
+++ b/pages/person/basics/basics.wxml
@@ -34,13 +34,13 @@
       </view>
       <view class="weui-cell__ft weui-cell__ft_in-access"></view>
   </navigator>
-  <navigator class="weui-cell weui-cell_access" hover-class="weui-cell_active" url='/pages/person/security/email/email'>
+  <!-- <navigator class="weui-cell weui-cell_access" hover-class="weui-cell_active" url='/pages/person/security/email/email'>
       <view class="weui-cell__hd"></view>
       <view class="weui-cell__bd weui-cell_primary">
           <text>邮箱设置</text><text>{{user.EMAIL}}</text>
       </view>
       <view class="weui-cell__ft weui-cell__ft_in-access"></view>
-  </navigator>
+  </navigator> -->
   <navigator class="weui-cell weui-cell_access" hover-class="weui-cell_active" url='/pages/person/security/phone/phone'>
       <view class="weui-cell__hd"></view>
       <view class="weui-cell__bd weui-cell_primary">
