--- a/pages/imitate/imitate.wxml
+++ b/pages/imitate/imitate.wxml
@@ -133,16 +133,19 @@
     <icon type="warn" size="16" color="#F43530"></icon><text>重要提示：</text>
   </view>
   <view class="footer2">
-    1、本系统提供高考志愿填报智能模拟功能，不等同于实际的网上志愿填报。建议考生在填报志愿时，结合本系统的推荐来完善志愿表；
+    1、本系统提供高考志愿填报智能模拟功能，不等同于实际的网上志愿填报。建议考生在填报志愿时，结合本系统的推荐来完善志愿表。
   </view>
   <view class="footer2">
-    2、您正在使用的是河北考生志愿填报智能模拟系统，提供“普通类文理的本科一、本科二批”的志愿填报模拟功能，该功能主要数据来源参考与各省市出版的填报指南以及各本科专科院系官网的历年数据；
+    2、您正在使用的是河北考生志愿填报智能模拟系统，提供“普通类文理的本科一批、本科二批”的志愿填报模拟功能，该功能数据主要来源于各省（市）教育考试院出版的报考指南和各大学官网的历年数据。
   </view>
   <view class="footer2">
-    3、当前版本使用的数据已经更新至2017年最新数据；
+    3、当前版本使用的数据已经更新至2017年最新数据。
   </view>
   <view class='footer2'>
-    4、本系统推荐结果仅限参考，在正式填报时，以教育考试院公布的最新招生计划为准，具体情况请根据当年招生政策自行判断。
+    4、在正式填报时，以教育考试院公布的最新招生计划为准。
+  </view>
+  <view class='footer2'>
+    5、若智能推荐（冲、稳、保、垫）四个结果中出现相同院校，请仔细核对学校专业。
   </view>
 </view>
 <view class='blank'></view>
