--- a/pages/consult/consultlist/consultlist.wxml
+++ b/pages/consult/consultlist/consultlist.wxml
@@ -139,19 +139,31 @@
 </view>
 <view class="weui-cells__title"></view>
 <view class="weui-cells weui-cells_after-title">
-            <view class="weui-cell">
+            <view class="weui-cell" bindtap="rule">
                 <view class="weui-cell__hd">
                     <image src="{{icon1}}" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
                 </view>
-                <view class="weui-cell__bd">招生简章</view>
-                <view class="weui-cell__ft"></view>
+                <view class="weui-cell__bd">招生章程</view>
+                <view class="weui-cell__ft weui-cell__ft_in-access {{checked ? '':'rotate_90'}}"></view>
             </view>
-            <view class="weui-cell">
+            <view class="weui-cells weui-cells_after-title" wx:for="{{rule}}" wx:key="{{item.TITLE}}" hidden='{{checked}}' bindtap="ruleContent" id="{{item.ARTICLE_ID}}">
+            <view class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+                <view class="weui-cell__bd">{{item.TITLE}}</view>
+                <view class="weui-cell__ft weui-cell__ft_in-access"></view>
+            </view>
+        </view>
+            <view class="weui-cell" bindtap="plan">
                 <view class="weui-cell__hd">
                     <image src="{{icon1}}" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
                 </view>
                 <view class="weui-cell__bd">招生计划</view>
-                <view class="weui-cell__ft"></view>
+                <view class="weui-cell__ft weui-cell__ft_in-access {{check ? '':'rotate_90'}}"></view>
+            </view>
+            <view class="weui-cells weui-cells_after-title" wx:for="{{plan}}" wx:key="{{item.TITLE}}" hidden='{{check}}' bindtap="planContent" id="{{item.ARTICLE_ID}}">
+            <view class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+                <view class="weui-cell__bd">{{item.TITLE}}</view>
+                <view class="weui-cell__ft weui-cell__ft_in-access"></view>
             </view>
         </view>
-<view class='lines'></view>
+        </view>
+<view class="lines"></view>
