--- a/pages/register/register.wxml
+++ b/pages/register/register.wxml
@@ -9,8 +9,12 @@
           </view>
           <view class="weui-cell__bd">
               <input class="weui-input" placeholder="请输入用户名" name="USERNAME"/>
+              
           </view>
       </view>
+      </view>
+      <view class="weui-cells__tips" style='color:red'>*用户名必须为6-10位数字或字母</view>
+       <view class="weui-cells weui-cells_after-title">
       <view class="weui-cell weui-cell_input">
           <view class="weui-cell__hd">
               <view class="weui-label">手机号</view>
@@ -56,7 +60,7 @@
               <view class="weui-agree__checkbox-icon">
                   <icon class="weui-agree__checkbox-icon-check" type="success_no_circle" size="9" wx:if="{{isAgree}}"></icon>
               </view>
-              我已阅读并同意遵守<navigator url="" class="weui-agree__link"> 《铭邦高考规划平台会员服务条款》</navigator>
+              我已阅读并同意遵守《铭邦高考规划平台会员服务条款》
           </view>
       </label>
   </checkbox-group>
