--- a/pages/video/play/play.wxml
+++ b/pages/video/play/play.wxml
@@ -1,3 +1,3 @@
 <!--pages/video/play/play.wxml-->
-<video id="myVideo"  class="video" src="http://wxsnsdy.tc.qq.com/105/20210/snsdyvideodownload?filekey=30280201010421301f0201690402534804102ca905ce620b1241b726bc41dcff44e00204012882540400&bizid=1023&hy=SH&fileparam=302c020101042530230204136ffd93020457e3c4ff02024ef202031e8d7f02030f42400204045a320a0201000400" controls show-fullscreen-btn show-center-play-btn></video>
+<video id="myVideo"  class="video" src="{{src}}" controls show-fullscreen-btn show-center-play-btn enable-progress-gesture loop="true" muted="true"></video>
 <view class='white'></view>
