--- a/pages/login/login.wxml
+++ b/pages/login/login.wxml
@@ -20,7 +20,7 @@
                 </view>
             </view>
         </view>
-        <view class="weui-cells__tips">请填写《铭邦高考志愿网》所使用的账户，我们将把账户信息进行关联</view>
+        <view class="weui-cells__tips">请填写《铭邦高考规划平台》所使用的账户，我们将把账户信息进行关联</view>
 
         <view class="weui-btn-area">
             <button class="weui-btn" type="primary" bindtap="showTopTips">确定</button>
