--- a/pages/video/play/play.wxml
+++ b/pages/video/play/play.wxml
@@ -1,3 +1,3 @@
 <!--pages/video/play/play.wxml-->
-<video id="myVideo"  class="video" src="{{src}}" controls show-fullscreen-btn show-center-play-btn enable-progress-gesture loop="true" muted="true"></video>
+<video id="myVideo"  class="video" src="{{src}}" controls show-fullscreen-btn show-center-play-btn enable-progress-gesture loop="true"></video>
 <view class='white'></view>
