--- a/pages/video/video.wxss
+++ b/pages/video/video.wxss
@@ -1,9 +1,9 @@
 /* pages/video/video.wxss */
 .section{
   width:96%;
-  margin:5rpx 2% 5rpx 2%;
+  margin:30rpx 2% 5rpx 2%;
   display: flex;
-  flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
 }
@@ -12,26 +12,23 @@
 }
 .images{
   width:100%;
-  height:200rpx;
+  height:262rpx;
 }
 .time{
   display: flex;
   flex-direction: row;
-  justify-content: center;
   align-items: center;
 }
 .count{
   width:50%;
   display: flex;
   flex-direction: row;
-  justify-content: center;
   align-items: center;
 }
 .date{
   width:50%;
   display: flex;
   flex-direction: row;
-  justify-content: center;
   align-items: center;
 }
 .text{
