修改新闻浏览量加1

--- a/pages/intelligence/intelligence.wxml
+++ b/pages/intelligence/intelligence.wxml
@@ -12,7 +12,7 @@
 <view class="weui-cells weui-cells_after-title">
   <view class="weui-cell weui-cell_access" hover-class="weui-cell_active">
       <view class="weui-cell__bd">批次</view>
-      <view class="weui-cell__ft weui-cell__ft_in-access">
+      <view class="weui-cell__ft weui-cell__ft_in-access width">
         <picker bindchange="bindPickerChange" value="{{index}}" range="{{batch}}" range-key='NAME'>
         <view>{{batch[index].NAME}}</view>
       </picker>
